<resources>
    <string name="app_name">SpaceXInfo</string>
    <string name="mission_patch">Mission Patch</string>
    <string name="title_placeholder">SpaceXInfo Title</string>
    <string name="rocket_type_placeholder">SpaceXInfo Rocket</string>
    <string name="date_placeholder">SpaceXInfo Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missions_label">Missions</string>
    <string name="settings_label">Settings</string>
    <string name="upcoming_launch_label">Upcoming Launch</string>
    <string name="past_launch_label">Past Launch</string>
    <string name="description_placeholder">SpaceXInfo Description</string>
    <string name="history_label">History</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="rocket_photo_label">Rocket Photo</string>
    <string name="rockets_label">Rockets</string>
    <string name="next_launch_label">Next Launch</string>
    <string name="update_widget_label">Updating widget data</string>
    <string name="update_widget_succeful_label">Update widget data successful</string>
    <string name="update_widget_failed_label">Update widget data failed</string>
    <string name="no_video_warning">Sorry no video available for this launch</string>
    <string name="rocket_type_label">Rocket Type</string>
    <string name="payload_lable">Payload</string>
    <string name="launch_date_label">Launch Date</string>
    <string name="launch_site_label">Launch Site</string>
    <string name="description_label">Description</string>
    <string name="spacexinfo_payload">SpaceXInfo Payload</string>
    <string name="spacexinfo_launch_site">SpaceXInfo Launch Site</string>
    <string name="watch_here">Watch Here</string>
    <string name="about_company">About Company</string>
    <string name="company_summary_dummy">Company Summary</string>
    <string name="spacex">SpaceX</string>
    <string name="founder_label">Founder</string>
    <string name="ceo_label">CEO</string>
    <string name="coo_label">COO</string>
    <string name="headquarters_label">Headquarters</string>
    <string name="websites_label">Websites</string>
    <string name="spacexinfo_mission_name_label">SpaceXInfo Mission Name</string>
    <string name="mission_name">Mission Name</string>
</resources>