<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background"
    android:minWidth="256dp"
    android:minHeight="150dp"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_launch_label"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_widget_refresh_next_launch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_baseline_refresh_24"
            android:backgroundTint="@android:color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_launch"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_widget_mission_patches"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/mission_patch"
            android:scaleType="fitCenter"
            android:src="@drawable/mission_patch_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_widget_launch_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_placeholder"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_widget_launch_rocket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rocket_type_placeholder"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_widget_launch_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_placeholder"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_widget_watch_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/button_background"
        android:text="@string/watch_here"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>