<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:padding="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_mission_patches"
        android:layout_width="120dp"
        android:padding="8dp"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitCenter"
        android:src="@drawable/mission_patch_placeholder"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_launch_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_launch_rocket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rocket_type_placeholder" />

        <TextView
            android:id="@+id/tv_launch_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder" />

    </LinearLayout>

</LinearLayout>